force-app/main/default/objects/Project_Team_Member_Object_Access__mdt/Project_Team_Member_Object_Access__mdt.object-meta.xml
<CustomObject>
    <description>Defines object access for Project Team Members</description>
    <label>Project Team Member Object Access</label>
    <pluralLabel>Project Team Member Object Access</pluralLabel>
</CustomObject>