force-app/main/default/objects/Project_Team_Member_Object_Access__mdt/fields/I_RS_Fields_to_Query__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Fields_to_Query__c</fullName>
    <defaultValue>&quot;Id, Name&quot;</defaultValue>
    <description>Any fields that must be included in SOQL Query.</description>
    <label>Fields to Query</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>