force-app/main/default/objects/Project_Team_Member_Object_Access__mdt/fields/I_RS_In_Between_Parent_Relationship__c.field-meta.xml
<CustomField>
    <fullName>I_RS_In_Between_Parent_Relationship__c</fullName>
    <description>If object is grandchild of Project Proposal (or even further down), specify the object relationship to traverse</description>
    <label>In-Between Parent Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>