force-app/main/default/objects/Project_Team_Member_Object_Access__mdt/fields/I_RS_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Object_Name__c</fullName>
    <description>Object API Name</description>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>