force-app/main/default/objects/Project_Team_Member_Object_Access__mdt/fields/I_RS_Object_Share_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Object_Share_Name__c</fullName>
    <label>Object Share Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>