force-app/main/default/objects/Project_Team_Member_Object_Access__mdt/fields/I_RS_Project_Proposal_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal_Lookup_Field__c</fullName>
    <label>Project Proposal Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>